# nerd-dictation

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DAEMON_PLAN.md  GEMINI.md  INSTALL.md  USER_GUIDE.md  pyproject.toml
_misc/: jarvis.py  jarvis_launcher.sh  nerd-dictation.py  transcribe_cli_command.py  transcribe_whisper.py  voice_assistant.sh  voice_assistant_whisper.sh  voice_cli_runner.sh
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/: 001-voice-hud.md
conductor/tracks/jarvis_cpu_migration_20260129/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/jarvis_daemon_20260129/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/jarvis_loop_20260129/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/jarvis_ptt_20260131/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/jarvis_uv_migration_20260201/: index.md  metadata.json  plan.md  spec.md
scripts/: benchmark_daemon.py  execute.py  jarvis_daemon.py  jarvis_launcher.sh  jarvis_listener.py  jarvis_ptt_handler.sh  monitor_resources.sh  paste_input.py  speak.py  transcribe.py  type_input.py  voice_assistant.sh  watch_output.py
systemd/user/: jarvis-listener.service  jarvis.service  jarvis.socket
tests/: test_execute.py  test_jarvis_daemon.py  test_jarvis_daemon_cpu.py  test_jarvis_listener.py  test_latency.py  test_monitor_resources.py  test_ptt_handler.py  test_ptt_requirements.py  test_speak.py  test_transcribe.py  test_transcribe_client.py  test_type_input.py  test_watch_output.py
